read all data from ingredients